# docker-controller-server

./: .flake8  manage.py  pyproject.toml
dockercontroller/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
dockercontroller/apps/: __init__.py
dockercontroller/apps/controller/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
dockercontroller/apps/controller/migrations/: 0001_initial.py  0002_alter_service_version.py  0003_rename_custom_env_vars_service_custom_config.py  0004_alter_service_custom_config.py  0005_auto_20210819_1721.py  0006_auto_20210819_1730.py  0007_alter_service_updated_at.py
