[tool.poetry]
name = "docker-controller-server"
version = "0.1.0"
description = "Django app to control remote docker containers"
authors = ["Mario <mario.hernandez@lytica.ai>"]

[tool.poetry.dependencies]
python = "^3.6.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
pre-commit = "^2.14.0"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.6.0"
isort = "^5.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
